.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.2.1 - Unreleased
----------------

- Update default frontpage to refer to Plone 3 instead of 3.0.
  [wichert]

- Added time_only for use with toLocalizedTime so that event_view now localizes
  the start/end times if the start/end dates are the same. Added migration for
  3.2 to 3.2.1 to add new property to the propery tool. Closes
  http://dev.plone.org/plone/ticket/8607
  [jnelson, calvinhp]

- Fixed links-plain issue on the front-page. This closes  
  http://dev.plone.org/plone/ticket/6479. 
  [cwainwright, calvinhp] 

- Put in workaround for IE6 background caching problem, closes
  http://dev.plone.org/plone/ticket/7445
  [cwainwright, calvinhp]

- Removed old background icon from personal bar for RTL scripts.
  Closes http://dev.plone.org/plone/ticket/4570
  [emanlove]

- Moved history icon off text and shifted history header
  to the right under RTL scripts. Closes
  http://dev.plone.org/plone/ticket/6368
  [emanlove]

- Cleaned up document actions for RTL scripts. Closes
  http://dev.plone.org/plone/ticket/8863
  [emanlove]


3.2 - December 31, 2008
-----------------------

- Merge the upgrade instructions from
  http://plone.org/documentation/manual/upgrade-guide/version/upgrading-from-3-x-to-3.2
  into the release notes.
  [wichert]


3.2rc1 - December 15, 2008
--------------------------

- Shifted profile and personal preferences to the left for RTL
  scripts. Closes
  http://dev.plone.org/plone/ticket/8169
  [emanlove]

- Load the `plone.app.locales` configure.zcml. This fixes
  http://dev.plone.org/plone/ticket/8788.
  [hannosch]

- Cleaned up Livesearch results for RTL Languages.
  Closes http://dev.plone.org/plone/ticket/4632
  [emanlove]

- For RTL languages adjusted document content padding so welcome
  text fits inside text area. Closes